# paxter

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  arithmetic.lark  dev-requirements.in  dev-requirements.txt  playground.py  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
ci/templates/: .travis.yml
docs/: README.md  authoring-api.rst  authoring_api.md  authoring_api.rst  conf.py  core-api.rst  core_api.md  core_api.rst  custom_renderer_tutorial.md  first_tutorial.md  first_tutorial.rst  getting_started.md  getting_started.rst  index.md  index.rst  one_giant_tutorial.rst  paxter_language_tutorial.md  python_authoring_mode_tutorial.md  quick-blogging.rst  requirements.in  requirements.txt  syntax.md  syntax.rst  tutorial.md  tutorials.md
docs/beginner-tutorials/: add-a-second-paragraph.rst  adding-a-second-paragraph.rst  coding-more-python-in-documents.rst  customization-demo-codeblock-syntax-highlight.md  define-common-constants.rst  defining-common-constants.rst  dive-into-command-options.md  escaping-mechanisms.md  evaluating-python-code.md  evaluation-cycle-explained.md  getting-started.md  getting-started.rst  include-an-email-address.rst  including-an-email-address.rst  index.rst  inside-options.rst  interpreting-python-code.md  making-a-list-of-items.rst  making-a-list-or-a-table.rst  more-python-code-in-documents.rst  quick-blogging.md  quick-blogging.rst  write-a-first-blog-entry.rst  writing-a-first-blog-entry.rst
docs/diagram/: grammar.xml
docs/drawings/: Paxter Logo.fig
docs/intermediate-tutorials/: index.md  index.rst
docs/legacy/: getting_started.rst  index.rst  paxter_language_tutorial.md  python_authoring_mode_tutorial.md
docs/references/: authoring-api.md  core-api.md  syntax.md
docs/templates/: config.mako
docs/tutorial/: add-a-second-paragraph.rst  define-common-constants.rst  include-an-email-address.rst  index.rst  write-a-first-blog-entry.rst
paxter/: __init__.py  __main__.py  commands.py  data.py  exceptions.py  lexers.py  parser.py  syntax.py  transformer.py
paxter/core/: __init__.py  data.py  exceptions.py  lexers.py  parser.py  peg.py  unicode.py
paxter/transformers/: __init__.py  base.py
pdoc_templates/: config.mako
src/paxter/: __init__.py  __main__.py  commands.py  common.py  exceptions.py  meta.json  metadata.json  preset.py
src/paxter_legacy/: __init__.py  __main__.py  meta.json
tests/: test_cli.py  test_dummy.py  test_evaluator.py  test_parser.py  test_pyauthor_string.py  test_render_string.py  test_transformer.py  test_unsafe_render.py
wiki/: customize.md  pyenv.md
(+184 files in other folders)
