[metadata]
license_files = LICENSE

[bdist_wheel]
universal = 0

[flake8]
extend-exclude = venv/,*/migrations/*
select = E,F,W,C,B,B902,B950,I
extend-ignore = E501
max-line-length = 80
max-complexity = 12
application-import-names = paxter
import-order-style = pycharm

[mypy]
python_version = 3.8
ignore_missing_imports = True

[tool:pytest]
norecursedirs =
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = paxter
default_section = THIRDPARTY
forced_separate = test_paxter
not_skip = __init__.py
skip = migrations
