[metadata]
license_files = LICENSE

[bdist_wheel]
universal = 0

[flake8]
extend-exclude = venv/,*/migrations/*
select = E,F,W,C,B,B902,B950,I
extend-ignore = E501
max-line-length = 80
max-complexity = 12
application-import-names = paxter,tests
import-order-style = pycharm

[mypy]
python_version = 3.8
ignore_missing_imports = True

[tool:pytest]
norecursedirs =
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[coverage:run]
branch = true
source =
    paxter
    tests

[coverage:paths]
source =
    src/
    */site-packages

[coverage:report]
show_missing = true
precision = 2
omit =
    *migrations*
    paxter/commands.py
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if False:
    if __name__ == .__main__.
